--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>Zero Waste</title>
   </head>
   <body>
